docs/tests/parser/edge_cases/valid/AssignmentChain.src
fn void test() {
    let int x, y, z;
    x = y = z = 0;
}
