docs/tests/parser/edge_cases/invalid/MissingSemicolon.src
fn void test() {
    let int x = 1
    let int y = 2;
}
